# hyprmural

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  mise.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
aur/hyprmural/: PKGBUILD
aur/hyprmural-git/: PKGBUILD
examples/: hyprmural.conf
examples/accent/: accent.py  accent.sh  matugen-per-workspace.toml  pill-accents.py  pill-mode-bold.css  pill-mode-layered.css  pill-mode-subtle.css  vibrant.py
src/: config.cpp  config.h  egl.cpp  egl.h  hooks.cpp  hooks.h  hyprland_ipc.cpp  hyprland_ipc.h  image.cpp  image.h  layer_surface.cpp  layer_surface.h  main.cpp  renderer.cpp  renderer.h  wayland.cpp  wayland.h
